New line change

--- a/3textformat.html
+++ b/3textformat.html
@@ -20,7 +20,7 @@
 <br><ins>HI THIS IS TEXT FORMAT</ins>
 <br>this is lg<sub>10</sub>5 value
 <br>this is 1<sup>st</sup>text
-
+<br>this is the change 
 <br><br>
  
  <script type="text/javascript">
